k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    annotations:
        kompose.cmd: kompose convert -o ./k8s/
        kompose.version: 1.36.0 (HEAD)
    labels:
        io.kompose.service: backend
    name: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: backend
    template:
        metadata:
            annotations:
                kompose.cmd: kompose convert -o ./k8s/
                kompose.version: 1.36.0 (HEAD)
            labels:
                io.kompose.service: backend
        spec:
            containers:
                - env:
                      - name: DB_HOST
                        value: mariadb
                      - name: DB_NAME
                        value: library
                      - name: DB_PASSWORD
                        valueFrom:
                            secretKeyRef:
                                key: mariadb-root-password
                                name: secret
                      - name: DB_USER
                        value: root
                  image: iru21/library-backend:latest
                  livenessProbe:
                      exec:
                          command:
                              - wget
                              - -q
                              - --spider
                              - http://127.0.0.1:3000/health
                      failureThreshold: 5
                      periodSeconds: 10
                      timeoutSeconds: 5
                  name: backend
                  ports:
                      - containerPort: 3000
                        protocol: TCP
            restartPolicy: Always
