k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./k8s/
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - image: iru21/library-frontend:latest
          name: frontend
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
