k8s/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    annotations:
        kompose.cmd: kompose convert -o ./k8s/
        kompose.version: 1.36.0 (HEAD)
    labels:
        io.kompose.service: keycloak
    name: keycloak
spec:
    replicas: 1
    selector:
        matchLabels:
            io.kompose.service: keycloak
    template:
        metadata:
            annotations:
                kompose.cmd: kompose convert -o ./k8s/
                kompose.version: 1.36.0 (HEAD)
            labels:
                io.kompose.service: keycloak
        spec:
            containers:
                - args:
                      - start
                  image: quay.io/keycloak/keycloak:26.2.5
                  name: keycloak
                  ports:
                      - containerPort: 8080
                        protocol: TCP
            restartPolicy: Always
