k8s/phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./k8s/
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: phpmyadmin
  name: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: phpmyadmin
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./k8s/
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: phpmyadmin
    spec:
      containers:
        - env:
            - name: PMA_HOST
              value: mariadb
            - name: PMA_PASSWORD
              value: mysecret
            - name: PMA_USER
              value: root
          image: phpmyadmin/phpmyadmin
          name: phpmyadmin
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
