k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
    annotations:
        kompose.cmd: kompose convert -o ./k8s/
        kompose.version: 1.36.0 (HEAD)
    labels:
        io.kompose.service: backend
    name: backend
spec:
    ports:
        - name: "3000"
          port: 3000
          targetPort: 3000
    selector:
        io.kompose.service: backend
