k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
    annotations:
        kompose.cmd: kompose convert -o ./k8s/
        kompose.version: 1.36.0 (HEAD)
    labels:
        io.kompose.service: frontend
    name: frontend
spec:
    ports:
        - name: "8080"
          port: 8080
          targetPort: 80
    selector:
        io.kompose.service: frontend
