k8s/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
    annotations:
        kompose.cmd: kompose convert -o ./k8s/
        kompose.version: 1.36.0 (HEAD)
    labels:
        io.kompose.service: keycloak
    name: keycloak
spec:
    ports:
        - name: "8081"
          port: 8081
          targetPort: 8080
    selector:
        io.kompose.service: keycloak
