k8s/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
    annotations:
        kompose.cmd: kompose convert -o ./k8s/
        kompose.version: 1.36.0 (HEAD)
    labels:
        io.kompose.service: mariadb
    name: mariadb
spec:
    ports:
        - name: "3306"
          port: 3306
          targetPort: 3306
    selector:
        io.kompose.service: mariadb
