k8s/phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
    annotations:
        kompose.cmd: kompose convert -o ./k8s/
        kompose.version: 1.36.0 (HEAD)
    labels:
        io.kompose.service: phpmyadmin
    name: phpmyadmin
spec:
    ports:
        - name: "8082"
          port: 8082
          targetPort: 80
    selector:
        io.kompose.service: phpmyadmin
