k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: backend-ingress
    annotations:
        nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
        nginx.ingress.kubernetes.io/ssl-redirect: "true"
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
    rules:
        - host: library.test
          http:
              paths:
                  - path: /api
                    pathType: Prefix
                    backend:
                        service:
                            name: backend
                            port:
                                number: 3000
