k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: library-ingress
    annotations:
        nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
        nginx.ingress.kubernetes.io/ssl-redirect: "true"
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    tls:
        - hosts:
              - library.test
          secretName: library-keycloak-tls
    rules:
        - host: library.test
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend
                            port:
                                number: 80
                  - path: /admin
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend
                            port:
                                number: 80
                  - path: /saved
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend
                            port:
                                number: 80
                  - path: /login
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend
                            port:
                                number: 80
        - host: phpmyadmin.test
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: phpmyadmin
                            port:
                                number: 8082
