k8s/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: keycloak-ingress
    annotations:
        nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
        nginx.ingress.kubernetes.io/ssl-redirect: "true"
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
    tls:
        - hosts:
              - keycloak.test
          secretName: library-keycloak-tls
    rules:
        - host: keycloak.test
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: keycloak
                            port:
                                number: 8081
